[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/game/game_board.gd" id="1_game_board"]

[node name="GameBoard" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_game_board")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.08, 0.08, 0.12, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="HeaderContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer/HeaderContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 36
text = "Shadow Hunter - Game Board (Placeholder)"

[node name="StatusContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="CurrentPlayerLabel" type="Label" parent="MarginContainer/VBoxContainer/StatusContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Current Player: ..."

[node name="TurnLabel" type="Label" parent="MarginContainer/VBoxContainer/StatusContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Turn: 1"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PlayerListContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PlayersLabel" type="Label" parent="MarginContainer/VBoxContainer/PlayerListContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Players:"

[node name="PlayerList" type="VBoxContainer" parent="MarginContainer/VBoxContainer/PlayerListContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="InfoLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
text = "This is a placeholder game board. Full board implementation coming in Story 1.3."
horizontal_alignment = 1

[node name="ButtonContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 20

[node name="EndTurnButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "End Turn"

[node name="BackToMenuButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Back to Menu"

[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonContainer/EndTurnButton" to="." method="_on_end_turn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonContainer/BackToMenuButton" to="." method="_on_back_to_menu_pressed"]
